--- a/.github/workflows/static.yml
+++ b/.github/workflows/static.yml
@@ -24,7 +24,7 @@ concurrency:
 
 jobs:
   # Single deploy job since we're just deploying
-  deploy:
+  deploy-github-pages:
     environment:
       name: github-pages
       url: ${{ steps.deployment.outputs.page_url }}
@@ -43,11 +43,27 @@ jobs:
           # Upload entire repository
           path: '.'
 
-      # - name: Deploy to GitHub Pages
-      #   id: deployment
-      #   uses: actions/deploy-pages@v4
+      - name: Deploy to GitHub Pages
+        id: deployment
+        uses: actions/deploy-pages@v4
+
+  deploy-heroku:
+    environment:
+      name: heroku
+    runs-on: ubuntu-latest
+
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v4
+
       - name: Deploy to Heroku
+        env:
+          FLASK_ENV: production
+          # Add other environment variables as needed
         run: |
           heroku login -i
-          heroku create eval_booker
+          heroku create your_unique_app_name
+          # Set environment variables on Heroku
+          heroku config:set FLASK_ENV=production
+          # Add other environment variables as needed
           git push heroku main
